// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip #direction left 1`] = `
<div
  className="Tooltip Tooltip--left"
  role="tooltip"
  style={
    Object {
      "inset-inline-start": 13,
      "left": 13,
      "top": 601,
    }
  }
>
  Test
</div>
`;

exports[`Tooltip #direction top 1`] = `
<div
  className="Tooltip Tooltip--top"
  role="tooltip"
  style={
    Object {
      "inset-inline-start": 7,
      "left": 7,
      "top": 1201,
    }
  }
>
  Test
</div>
`;

exports[`Tooltip #direction top-left 1`] = `
<div
  className="Tooltip Tooltip--top-left"
  role="tooltip"
  style={
    Object {
      "inset-inline-start": 1,
      "left": 1,
      "top": 1201,
    }
  }
>
  Test
</div>
`;
